[project]
name = "comfy-inpaint-blend"
version = "1.1.0"
description = "Seamless inpainting for image-space models like Google Nano Banana and ByteDance Seedream 4. Fixes color mismatches using Poisson blending."
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "opencv-python>=4.5.0",
    "numpy>=1.19.0",
    "torch>=1.9.0"
]
classifiers = [
    "Operating System :: OS Independent"
]

[project.urls]
Repository = "https://github.com/darkamenosa/comfy_inpaint_blend"
Documentation = "https://github.com/darkamenosa/comfy_inpaint_blend/wiki"
"Bug Tracker" = "https://github.com/darkamenosa/comfy_inpaint_blend/issues"

[tool.comfy]
PublisherId = "darkamenosa"
DisplayName = "Enhanced Image Composite Masked"
requires-comfyui = ">=1.0.0"